--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="{% static '/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
         <meta charset="utf-8">
     </head>
     <body>
