--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-
+{% load static %}
 {% block body %}
     {% if not invaild %}
         <h1>Chart: {{code}} {{name}}</h1>
