--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,10 +4,12 @@
     <head>
         <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
         <meta charset="utf-8">
+        <title>ローソクチャート表示アプリケーション</title>
     </head>
     <body>
+        <header>Welcome!</header>
         {% block body %}
         {% endblock %}
+        <footer></footer>
     </body>
-
 </html>
