--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,9 +7,10 @@
         <title>ローソクチャート表示アプリケーション</title>
     </head>
     <body>
-        <header>Welcome!</header>
+        <header>
+            <h1>Welcome!</h1>
+        </header>
         {% block body %}
         {% endblock %}
-        <footer></footer>
     </body>
 </html>
